--- a/playbook.yml
+++ b/playbook.yml
@@ -5,7 +5,6 @@
 
   vars:
     vagrant_version: "2.4.1"
-    is_vagrant: false # Overriden to true in Vagrantfile
 
   pre_tasks:
 
@@ -21,7 +20,7 @@
 
 - name: Create Ansible user
   import_playbook: playbooks/create_ansible_user/main.yml
-  when: is_vagrant == true
+  when: is_vagrant|default(false)
 
 - name: Web Users
   import_playbook: playbooks/web_users/main.yml
