--- a/playbooks/web_dev_site/main.yml
+++ b/playbooks/web_dev_site/main.yml
@@ -6,6 +6,8 @@
   vars_files:
     - vars.yml
 
+  # TODO: Pre-tasks to create directories for letsencrypt, etc. and set permissions
+
   tasks:
 
     - name: Create siteroot folders
